--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -22,7 +22,7 @@
       <li onclick="showSection('certificates')">🏅 Certificates</li>
       <li onclick="showSection('videos')">🎥 My Classes</li>
       <li onclick="showSection('progress')">📊 Progress</li>
-      <li onclick="showSection('watch')">▶️ Watch Classes</li>
+      <!-- <li onclick="showSection('watch')">▶️ Watch Classes</li> -->
       <li onclick="logout()">🚪 Logout</li>
     </ul>
   </div>
